--- a/web/jjh_samoo/html5up-story/assets/css/noscript.css
+++ b/web/jjh_samoo/html5up-story/assets/css/noscript.css
@@ -385,3 +385,15 @@
 	.banner.onscroll-image-fade-in.is-inactive .image img {
 		opacity: 1;
 	}
+	
+    /* 추가한것 */
+    body.is-preload #header.alt > * {
+		opacity: 1;
+	}
+
+	body.is-preload #header.alt .logo {
+		-moz-transform: none;
+		-webkit-transform: none;
+		-ms-transform: none;
+		transform: none;
+	}
