--- a/web/Sanup/assets/css/noscript.css
+++ b/web/Sanup/assets/css/noscript.css
@@ -385,3 +385,15 @@
 	.banner.onscroll-image-fade-in.is-inactive .image img {
 		opacity: 1;
 	}
+/* Header */
+
+body.is-preload #header.alt > * {
+	opacity: 1;
+}
+
+body.is-preload #header.alt .logo {
+	-moz-transform: none;
+	-webkit-transform: none;
+	-ms-transform: none;
+	transform: none;
+}	
