--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -71,8 +71,8 @@
     --color-change-background-post:rgba(255,255,255,0.5);
     --color-change-background-b-post:rgba(0,0,0,0.1);
     --color-style-one-post:#ffbb00ad;
-    --color-style-two-post:#BFACA4;
-    --color-style-three-post:#8C6A56;
+    --color-style-two-post:#ffbb00ad;
+    --color-style-three-post:#ffbb00ad;
     --color-border-white-post:#efefef;
     --duration-animation-button-post:0.2s;
 
