--- a/node_file/web/assets/css/style.css
+++ b/node_file/web/assets/css/style.css
@@ -418,7 +418,7 @@ body {
 }
 
 #topnav .topbar-main {
-  background-color: #735f58;
+  background-color: #ffbb00;
 }
 
 #topnav .topbar-main .logo {
