--- a/node_file/web/landing/industry/assets/css/main.css
+++ b/node_file/web/landing/industry/assets/css/main.css
@@ -8624,7 +8624,7 @@ input, select, textarea {
 	}
 
 	#header p {
-	   font-size: 1.25em;
+	   font-size: 2.25em;
 	   letter-spacing: -0.025em;
 	}
 
@@ -8635,7 +8635,7 @@ input, select, textarea {
 	}
 
 	   #header.alt h1 {
-		  font-size: 3.25em;
+		  font-size: 8.25em;
 	   }
 
 	   #header.alt > * {
@@ -8759,7 +8759,7 @@ input, select, textarea {
 		--size-header-img-height: 4.5em; 
 		--padding-header: 2em; 
 		--font-header: 1.3em;
-		--color-background-menu:#ffbb00ad;
+		--color-background-menu:#1a160dad;
 	
 		--color-font-default-menu:rgba(0, 0, 0, 0.75);
 		--color-font-hover-menu:#fff;
@@ -8787,3 +8787,7 @@ input, select, textarea {
 		--size-width-im-action-bar:calc(var(--size-width-i-action-bar) + var(--margin-action-bar));
 		--duration-animation-action-bar:0.6s;
 	}			
+	#button1
+	{
+		font-size: 2em;
+	}
