--- a/node_file/web/landing/office/assets/css/main.css
+++ b/node_file/web/landing/office/assets/css/main.css
@@ -174,6 +174,7 @@ input, select, textarea {
 		line-height: 1.65;
 	}
 
+
 	a {
 		-moz-transition: color 0.2s ease-in-out;
 		-webkit-transition: color 0.2s ease-in-out;
@@ -8624,16 +8625,18 @@ input, select, textarea {
 	}
 
 	#header p {
-	   font-size: 1.25em;
+	   font-size: 2.25em;
 	   letter-spacing: -0.025em;
 	}
 
 	#header.alt {
-	   padding: 7em 5em 4em 5em ;
+		padding: 10vh 3em 15vh 3em;
+		width:100vw;
+		height:100vh;
 	}
 
 	   #header.alt h1 {
-		  font-size: 3.25em;
+		  font-size: 8.25em;
 	   }
 
 	   #header.alt > * {
@@ -8674,7 +8677,7 @@ input, select, textarea {
 	   }
 
 		  #header.alt {
-			 padding: 6em 4em 3em 4em ;
+			 /*padding: 6em 4em 3em 4em ;*/
 		  }
 
 	}
@@ -8686,7 +8689,7 @@ input, select, textarea {
 	   }
 
 		  #header.alt {
-			 padding: 5em 3em 2em 3em ;
+			 /*padding: 5em 3em 2em 3em ;*/
 		  }
 
 	}
@@ -8707,7 +8710,7 @@ input, select, textarea {
 			 }
 
 		  #header.alt {
-			 padding: 4em 2em 1em 2em ;
+			 /*padding: 4em 2em 1em 2em ;*/
 		  }
 
 			 #header.alt h1 {
@@ -8723,7 +8726,7 @@ input, select, textarea {
 	   }
 
 		  #header.alt {
-			 padding: 4em 1.5em 1em 1.5em ;
+			 /*padding: 4em 1.5em 1em 1.5em ;*/
 		  }
 
 	}
@@ -8735,7 +8738,7 @@ input, select, textarea {
 	   }
 
 		  #header.alt {
-			 padding: 3.5em 1em 0.5em 1em ;
+			 /*padding: 3.5em 1em 0.5em 1em ;*/
 		  }
 
 	}
@@ -8750,3 +8753,7 @@ input, select, textarea {
 	   -ms-transform: scale(0.8) rotate(-30deg);
 	   transform: scale(0.8) rotate(-30deg);
 	}			
+
+	#button1{
+		font-size:3vw;
+	}
