--- a/node_file/web/assets/css/intro.css
+++ b/node_file/web/assets/css/intro.css
@@ -107,7 +107,7 @@ footer[class="intro"]{
     width:100%;       
     color:#8e8e8e;
     border-top:1px solid black;
-    background-color:#1b1b1b;
+    background-color:#6bcaaad8;
     text-align: center;
     font-size:1em;
     padding:1em 0;
