--- a/node_file/web/use/_intro/assets/css/main.css
+++ b/node_file/web/use/_intro/assets/css/main.css
@@ -1198,7 +1198,7 @@
 /* Type */
 
 	body {
-		background-color: #1b1b1b;
+		background-color: #6bcaaad8;
 		color: rgba(255, 255, 255, 0.75);
 	}
 
