--- a/node_file/web/assets/css/style.css
+++ b/node_file/web/assets/css/style.css
@@ -414,7 +414,7 @@ body {
 }
 
 #topnav .topbar-main {
-  background-color: #ffbb00;
+  background-color: #6bcaaad8;
 }
 
 #topnav .topbar-main .logo {
@@ -622,7 +622,7 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  width: 100%;
+  width: 100%;;
 }
 
 .search-wrap .search-input {
