--- a/node_file/web/landing/office/assets/css/main.css
+++ b/node_file/web/landing/office/assets/css/main.css
@@ -2332,6 +2332,7 @@ input, select, textarea {
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
+	input[type="title"],
 	input[type="tel"],
 	input[type="search"],
 	input[type="url"],
