--- a/node_file/web/use/_intro/assets/css/main.css
+++ b/node_file/web/use/_intro/assets/css/main.css
@@ -1369,9 +1369,6 @@
 		color: #fff;
 	}
 
-	a {
-		color: #F64747;
-	}
 
 	strong, b {
 		color: #fff;
@@ -1789,7 +1786,7 @@
 /* Form */
 
 	form {
-		margin: 0 0 2em 0;
+		margin: 0 0 0 0;
 	}
 
 		form .field {
@@ -2129,7 +2126,7 @@
 
 	ol {
 		list-style: decimal;
-		margin: 0 0 2em 0;
+		margin: 0 0 0 0;
 		padding-left: 1.25em;
 	}
 
@@ -2139,12 +2136,12 @@
 
 	ul {
 		list-style: disc;
-		margin: 0 0 2em 0;
+		margin: 0 0 0 0;	
 		padding-left: 1em;
 	}
 
 		ul li {
-			padding-left: 0.5em;
+			padding-left: 0.25em;
 		}
 
 		ul.alt {
@@ -4015,3 +4012,4 @@
 			}
 
 		}
+		
